--- a/src/templates/portfolio/market.html
+++ b/src/templates/portfolio/market.html
@@ -6,7 +6,7 @@
 {% block title %}Thị trường - Portfolio Management{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'userLogin/css/market.css' %}">
+<link rel="stylesheet" href="{% static 'portfolio/css/market.css' %}">
 <style>
     :root {
         --primary-color: #1a73e8;
