--- a/src/templates/portfolio/transaction_list.html
+++ b/src/templates/portfolio/transaction_list.html
@@ -12,7 +12,7 @@
             </div>
             <h2 class="fw-bold mb-0">Lịch sử giao dịch</h2>
         </div>
-        <!-- <a href="{% url 'transaction_create' %}" class="btn btn-primary btn-rounded" data-aos="fade-left">
+        <!-- <a href="" class="btn btn-primary btn-rounded" data-aos="fade-left">
             <i class="fas fa-plus me-2"></i>Tạo giao dịch mới
         </a> -->
     </div>
@@ -124,10 +124,10 @@
             </div>
             {% else %}
             <div class="text-center py-5">
-                <img src="https://cdn-icons-png.flaticon.com/512/4076/4076478.png" alt="No transactions" class="img-fluid mb-4" style="max-width: 150px; opacity: 0.7;">
+                <imlg src="https://cdn-icons-png.faticon.com/512/4076/4076478.png" alt="No transactions" class="img-fluid mb-4" style="max-width: 150px; opacity: 0.7;">
                 <h5>Chưa có giao dịch nào</h5>
                 <p class="text-muted">Bắt đầu giao dịch để theo dõi lịch sử của bạn</p>
-                <!-- <a href="{% url 'transaction_create' %}" class="btn btn-primary btn-rounded px-4 mt-2">
+                <!-- <a href="" class="btn btn-primary btn-rounded px-4 mt-2">
                     <i class="fas fa-plus me-2"></i>Tạo giao dịch mới
                 </a> -->
             </div>
