--- a/src/templates/portfolio/bank_account_form.html
+++ b/src/templates/portfolio/bank_account_form.html
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-between mt-4">
-                            <a href="{% url 'deposit_money' %}" class="btn btn-light btn-rounded">
+                            <a href="{% url 'wallet' %}" class="btn btn-light btn-rounded">
                                 <i class="fas fa-arrow-left me-2"></i>Quay lại
                             </a>
                             <button type="submit" class="btn btn-primary btn-rounded">
